--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Schneider Consalt</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Schneider Consalt</title>
+    <link href="./style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <div class="header__container">
+        <div class="header__company">
+          <img class="header__logo" src="./img/logo.png" />
+          <div class="header__name">
+            <div class="header__companyName">НАЗВАНИЕ</div>
+            <div class="header__companyName">КОМПАНИИ</div>
+            <div class="header__companyDescription">Самая крутая компания!</div>
+          </div>
+        </div>
+        <div class="header__sale">
+          Распродажа до <span id="sale_date">15.02.16</span>!
+        </div>
+        <div class="header__phone">
+          <div>+7 (343) 252-52-52</div>
+          <div>+7 (343) 252-52-52</div>
+        </div>
+      </div>
+    </header>
+    <menu></menu>
+    <slider></slider>
+    <content></content>
+    <footer></footer>
+    <script src="./index.js"></script>
+  </body>
 </html>
