--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <div class="header__company">
           <img class="header__logo" src="./img/logo.png" />
           <div class="header__name">
-            <div class="header__companyName">НАЗВАНИЕ</div>
-            <div class="header__companyName">КОМПАНИИ</div>
-            <div class="header__companyDescription">Самая крутая компания!</div>
+            <div class="header__company-name">НАЗВАНИЕ</div>
+            <div class="header__company-name">КОМПАНИИ</div>
+            <div class="header__company-description">
+              Самая крутая компания!
+            </div>
           </div>
         </div>
         <div class="header__sale">
@@ -27,7 +29,17 @@
         </div>
       </div>
     </header>
-    <menu></menu>
+    <menu>
+      <nav>
+        <ul class="menu__container">
+          <li class="menu__item">Главная</li>
+          <li class="menu__item">Каталог</li>
+          <li class="menu__item">Доставка и оплата</li>
+          <li class="menu__item">Прайс-лист</li>
+          <li class="menu__item">Контакты</li>
+        </ul>
+      </nav>
+    </menu>
     <slider></slider>
     <content></content>
     <footer></footer>
