--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="header__container">
         <div class="header__company">
-          <img class="header__logo" src="./img/logo.png" />
+          <img class="header__logo" src="./img/logo.png" alt="company logo" />
           <div class="header__name">
             <div class="header__company-name">НАЗВАНИЕ</div>
             <div class="header__company-name">КОМПАНИИ</div>
@@ -40,7 +40,7 @@
         </ul>
       </nav>
     </menu>
-    <slider></slider>
+    <slider> </slider>
     <content></content>
     <footer></footer>
     <script src="./index.js"></script>
