--- a/index.html
+++ b/index.html
@@ -40,8 +40,40 @@
         </ul>
       </nav>
     </menu>
-    <slider> </slider>
-    <content></content>
+    <slider></slider>
+    <content>
+      <div class="content__container">
+        <aside class="content__aside">
+          <h2>Новости</h2>
+          <div class="aside__news">
+            <div class="aside__date">14 сетнября 2015г.</div>
+            <div class="aside__text">Акция на входные двери Фалько!</div>
+          </div>
+          <div class="aside__news">
+            <div class="aside__date">14 сентября 2015г.</div>
+            <div class="aside__text">
+              Установка межкомнатных дверей в подарок при покупке 3-х полотен!
+            </div>
+          </div>
+          <div class="aside__news">
+            <div class="aside__date">14 сентября 2015г.</div>
+            <div class="aside__text">Новинка! Термо двери Форт!</div>
+          </div>
+          <div class="aside__news">
+            <div class="aside__date">14 сентября 2015г.</div>
+            <div class="aside__text">
+              Установка межкомнатных дверей в подарок при покупке 3-х полотен!
+            </div>
+          </div>
+          <div class="aside__news">
+            <div class="aside__date">14 сентября 2015г.</div>
+            <div class="aside__text">Новинка! Термо двери Форт!</div>
+          </div>
+          <a class="aside_link" href="#">Архив акций</a>
+        </aside>
+        <article></article>
+      </div>
+    </content>
     <footer></footer>
     <script src="./index.js"></script>
   </body>
