add article and footer

--- a/index.html
+++ b/index.html
@@ -29,52 +29,102 @@
         </div>
       </div>
     </header>
-    <menu>
-      <nav>
-        <ul class="menu__container">
-          <li class="menu__item">Главная</li>
-          <li class="menu__item">Каталог</li>
-          <li class="menu__item">Доставка и оплата</li>
-          <li class="menu__item">Прайс-лист</li>
-          <li class="menu__item">Контакты</li>
-        </ul>
-      </nav>
-    </menu>
-    <slider></slider>
-    <content>
-      <div class="content__container">
-        <aside class="content__aside">
-          <h2>Новости</h2>
-          <div class="aside__news">
-            <div class="aside__date">14 сетнября 2015г.</div>
-            <div class="aside__text">Акция на входные двери Фалько!</div>
-          </div>
-          <div class="aside__news">
-            <div class="aside__date">14 сентября 2015г.</div>
-            <div class="aside__text">
-              Установка межкомнатных дверей в подарок при покупке 3-х полотен!
+    <div class="spacer">
+      <menu>
+        <nav>
+          <ul class="menu__container">
+            <li class="menu__item">Главная</li>
+            <li class="menu__item">Каталог</li>
+            <li class="menu__item">Доставка и оплата</li>
+            <li class="menu__item">Прайс-лист</li>
+            <li class="menu__item">Контакты</li>
+          </ul>
+        </nav>
+      </menu>
+      <slider></slider>
+      <content>
+        <div class="content__container">
+          <aside class="content__aside">
+            <h2>Новости</h2>
+            <div class="aside__news">
+              <div class="aside__date">14 сетнября 2015г.</div>
+              <div class="aside__text">Акция на входные двери Фалько!</div>
             </div>
-          </div>
-          <div class="aside__news">
-            <div class="aside__date">14 сентября 2015г.</div>
-            <div class="aside__text">Новинка! Термо двери Форт!</div>
-          </div>
-          <div class="aside__news">
-            <div class="aside__date">14 сентября 2015г.</div>
-            <div class="aside__text">
-              Установка межкомнатных дверей в подарок при покупке 3-х полотен!
+            <div class="aside__news">
+              <div class="aside__date">14 сентября 2015г.</div>
+              <div class="aside__text">
+                Установка межкомнатных дверей в подарок при покупке 3-х полотен!
+              </div>
             </div>
-          </div>
-          <div class="aside__news">
-            <div class="aside__date">14 сентября 2015г.</div>
-            <div class="aside__text">Новинка! Термо двери Форт!</div>
-          </div>
-          <a class="aside_link" href="#">Архив акций</a>
-        </aside>
-        <article></article>
+            <div class="aside__news">
+              <div class="aside__date">14 сентября 2015г.</div>
+              <div class="aside__text">Новинка! Термо двери Форт!</div>
+            </div>
+            <div class="aside__news">
+              <div class="aside__date">14 сентября 2015г.</div>
+              <div class="aside__text">
+                Установка межкомнатных дверей в подарок при покупке 3-х полотен!
+              </div>
+            </div>
+            <div class="aside__news">
+              <div class="aside__date">14 сентября 2015г.</div>
+              <div class="aside__text">Новинка! Термо двери Форт!</div>
+            </div>
+            <a class="aside_link" href="#">Архив акций</a>
+          </aside>
+          <article class="content__article">
+            <h1>Компания "Шнайдер Консалт"</h1>
+            <p>
+              Мы эксперты в запуске интернет-магазинов товаров для дома,
+              строительства и ремонта. Совместный опыт нашей команды в развитии и
+              продвижении проектов в сфере электронной торговли более 15 лет.
+            </p>
+            <p>
+              Мы создали надежную технологию, которая позволяет быстро и уверенно
+              выводить интернет-магазины на продажи и самоокупаемость. Если мы
+              беремся за проект, значит уверены в достижении бизнес результатов
+              для наших клиентов.
+            </p>
+            <h2>Чем мы занимаемся?</h2>
+            <div class="content__more-info">
+              <div>
+                <h3>Только товары для дома, строи&shy;тельства и ремонта.</h3>
+                <p>
+                  Нельзя одинаково хорошо разбираться во всех отраслях рынка.
+                  Поэтому мы работаем на тех секторах рынка, на которых имеем
+                  большой опыт и разбираемся лучше всего. И это гарантирует
+                  результат нашим клиентам.
+                </p>
+              </div>
+              <div>
+                <h3>Строим комплексный маркетинг и продажи.</h3>
+                <p>
+                  Мы не делаем просто сайты. Не занимаемся просто продвижением.
+                  Это не приносит результаты. Только комплексный маркетинг и
+                  система продаж могут принести вам доходы и прибыль.
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </content>
+    </div>
+    
+    <footer>
+      <div class="footer__container">
+        <div class="footer__company">© 2012-2016 ЗАО "Компания"</br>info@name.ru</div>
+        <nav class="footer__menu">
+          <ul>
+            <li>Главная</li>
+            <li>Каталог</li>
+            <li>Доставка и оплата</li>
+            <li>Прайс-лист</li>
+            <li>Контакты</li>
+          </ul>
+        </nav>
+        <div class="footer__link"><span>Разработка сайта</span> -</br>компания "Шнайдер Консалт"</div>
       </div>
-    </content>
-    <footer></footer>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
